# tonic-grpc-web-chat

./: .gitignore  README.rst  envoy.yaml
backend/: Cargo.toml  build.rs
backend/src/: server.rs
frontend/: chat_grpc_web_pb.js  chat_pb.js  client.js  index.html  package-lock.json  package.json
protos/: chat.proto
